--- a/travel_control/html/index.html
+++ b/travel_control/html/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/travel_control.css" />
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
     <title>Travel Control</title>
 </head>
 <body>
     <div id="tc_left">
     </div>
     <div id="tc_right">
-        <div id="tc_map">
-        </div>
+        <div id="tc_map"></div>
         <div id="tc_charts">
             <div id="tc_charts_total">
             </div>
@@ -23,8 +23,8 @@
             </div>
         </div>
     </div>
-    <script src="//d3js.org/d3.v5.js"></script>
-    <script src="//d3js.org/topojson.v3.js"></script>
+    <script src="//d3js.org/d3.v5.min.js"></script>
+    <script src="//d3js.org/topojson.v3.min.js"></script>
     <script src="js/travel_control.js"></script>
 </body>
 </html>
