Finish html dashboard

--- a/travel_control/html/index.html
+++ b/travel_control/html/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="tc_left">
+        <h1>Travel Agency Dashboard</h1>
     </div>
     <div id="tc_right">
         <div id="tc_map"></div>
@@ -23,8 +24,8 @@
             </div>
         </div>
     </div>
-    <script src="//d3js.org/d3.v5.min.js"></script>
-    <script src="//d3js.org/topojson.v3.min.js"></script>
+    <script src="js/d3.v5.min.js"></script>
+    <script src="js/topojson.v3.min.js"></script>
     <script src="js/travel_control.js"></script>
 </body>
 </html>
