Work in Travel Portal API

--- a/travel_control/html/index.html
+++ b/travel_control/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="tc_left">
-        <h1>Travel Agency Dashboard</h1>
+        <h1>Travel Control Dashboard</h1>
     </div>
     <div id="tc_right">
         <div id="tc_map"></div>
